--- a/farmacias.html
+++ b/farmacias.html
@@ -89,10 +89,10 @@
                     <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/K62M5e9trFbUAM4t8"> Chãs de Tavares</a></li>
                     <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
                         <ul> 
-                          <li><b>Seg-Sex:</b> 9h - 20h</li>
-                          <li><b>Sáb:</b> 9h- 19h</li>
+                          <li><b>Seg-Sex:</b> 9h - 17h</li>
                         </ul>
                     </li>
+                    <li><b>Entregas ao domicílio</b></li>
                 </ul>
             <p></p>
           </div>
@@ -219,36 +219,54 @@
           </div>
         </div>
     </div>
+
+           <!--Farmácia Beirão-->
+           <div class="col-md-4 mb-5">
+            <div class="card h-100">
+              <div class="card-body">
+                <h3 class="card-title">Farmácia Beirão -  Chãs de Tavares</h3>
+                <p class="card-text">
+                    </p><ul>
+                      <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:232651339"> 232651339</a></li>
+                        <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/K62M5e9trFbUAM4t8"> Chãs de Tavares</a></li>
+                        <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                            <ul> 
+                              <li><b>Seg-Sex:</b> 9h - 17h</li>
+                            </ul>
+                        </li>
+                        <li><b>Entregas ao domicílio</b></li>
+                    </ul>
+                <p></p>
+              </div>
+            </div>
+        </div>
+      </div>
+
+         <!--Posto Farmacêutico Móvel - Abrunhosa a Velha-->
+         <div class="col-md-4 mb-5">
+          <div class="card h-100">
+            <div class="card-body">
+              <h3 class="card-title">Posto Farmacêutico Móvel - Abrunhosa a Velha</h3>
+              <p class="card-text">
+                  </p><ul>
+                    <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:964487523"> 964487523</a></li>
+                      <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/gnfjdt1bPHm31xpS8"> Abrunhosa a Velha</a></li>
+                      <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                          <ul> 
+                            <li><b>Seg-Qui:</b> 16h - 17h30m</li>
+                          </ul>
+                      </li>
+                      <li><b>Entregas ao domicílio</b></li>
+                  </ul>
+              <p></p>
+            </div>
+          </div>
+      </div>
+    </div>
   <!--Fim da row-->
 </div>
 <!---->
-  <h2 style="font-weight: bold;">Chãs de Tavares</h2>
-    <hr>
-<div class="row">
-       <!--Farmácia Beirão-->
-       <div class="col-md-4 mb-5">
-        <div class="card h-100">
-          <div class="card-body">
-            <h3 class="card-title">Farmácia Beirão</h3>
-            <p class="card-text">
-                </p><ul>
-                  <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:232651339"> 232651339</a></li>
-                    <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/K62M5e9trFbUAM4t8"> Chãs de Tavares</a></li>
-                    <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
-                        <ul> 
-                          <li><b>Seg-Sex:</b> 9h - 20h</li>
-                          <li><b>Sáb:</b> 9h- 19h</li>
-                        </ul>
-                    </li>
-                </ul>
-            <p></p>
-          </div>
-        </div>
-    </div>
-  </div>
-</div>
-</div>
-</div>
+
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
