--- a/restaurantes.html
+++ b/restaurantes.html
@@ -168,6 +168,46 @@
               </div>
             </div>
 
+                <!--Panibrás-->
+                <div class="col-md-4 mb-5">
+                  <div class="card h-100">
+                    <div class="card-body">
+                      <h3 class="card-title">Panibrás - Moimenta de Maceira Dão</h3>
+                      <p class="card-text">
+                          </p><ul>     
+                         <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:232610109"> 232610109</a></li>
+                         <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/BJaVz65W2nUXhpUc8"> Moimenta de Maceira Dão</a></li>
+                              <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                                  <ul> 
+                                      <li><b>Seg-Sex:</b> 7h30m - 12h / 17h - 18h</li>
+                                      <li><b>Sáb-Dom:</b> 11h - 13h</li>
+                                  </ul>
+                              </li>
+                          </ul>
+                      <p></p>
+                    </div>
+                  </div>
+                </div>
+
+                     <!--Doce Recanto-->
+                     <div class="col-md-4 mb-5">
+                      <div class="card h-100">
+                        <div class="card-body">
+                          <h3 class="card-title">Doce Recanto - Moimenta de Maceira Dão</h3>
+                          <p class="card-text">
+                              </p><ul>     
+                             <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/mN2pTPyiSUHz9KcM8"> Moimenta de Maceira Dão</a></li>
+                                  <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                                      <ul> 
+                                          <li><b>Sem Informação</b></li>
+                                      </ul>
+                                  </li>
+                              </ul>
+                          <p></p>
+                        </div>
+                      </div>
+                    </div>
+
           <!--Fim da row-->
 </div>
 <!--Restaurantes-->
