--- a/servicos.html
+++ b/servicos.html
@@ -90,7 +90,7 @@
                     <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/GagfRcep2rkNANKNA"> Mangualde</a></li>
                     <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
                         <ul> 
-                           <li><b>Seg-Sex:</b> 8h - 20h</li>
+                           <li><b>Seg-Dom:</b> 8h - 20h</li>
                         </ul>
                     </li>
                 </ul>
@@ -106,10 +106,12 @@
                 <p class="card-text">
                     </p><ul>
                       <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:232619485"> 232619485 </a></li>
+                      <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:232619480"> 232619480 </a></li>
+                      <li><i class="fas fa-at" aria-hidden="true"></i> <a href="mailto:usfmangualde@srsviseu.min-saude.pt">usfmangualde@srsviseu.min-saude.pt  </a></li>
                         <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/8Z7hC5KAtfY5RHF66"> Mangualde</a></li>
                         <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
                             <ul> 
-                               <li><b>Seg-Sex:</b> 8h - 20h</li>
+                               <li><b>Seg-Dom:</b> 8h - 20h</li>
                             </ul>
                         </li>
                     </ul>
@@ -164,7 +166,7 @@
                         <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/TosVqGTvSGC5TNbf6"> Mangualde</a></li>
                         <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
                             <ul> 
-                               <li><b>Seg-Sex:</b> 9h - 12h30m / 14h30m - 18h</li>
+                               <li><b>Seg-Sex:</b> 8h30m - 12h30m / 14h30m - 18h</li>
                             </ul>
                         </li>
                     </ul>
@@ -191,7 +193,85 @@
                 <p></p>
               </div>
             </div>
-          </div>       
+          </div>  
+          
+            <!--Quiosque Pingo Doce-->
+        <div class="col-md-4 mb-5">
+          <div class="card h-100">
+            <div class="card-body">
+              <h3 class="card-title">Quiosque Pingo Doce</h3>
+              <p class="card-text">
+                  </p><ul>
+                      <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/g6AJSA3zownbzVs19"> Mangualde</a></li>
+                      <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                          <ul> 
+                              <li><b>Seg-Dom:</b> 9h - 19h</li>
+                          </ul>
+                      </li>
+                      <li><b>Pagamento Alternativo de Água ao Município de Mangualde</b></li>
+                  </ul>
+              <p></p>
+            </div>
+          </div>
+        </div> 
+
+                      <!--Cafetaria Galp Mangualde-->
+  <div class="col-md-4 mb-5">
+    <div class="card h-100">
+      <div class="card-body">
+        <h3 class="card-title">Cafetaria Galp - Mangualde </h3>
+            </p><ul>
+                <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/6E54UXaUivspxSSx9"> Mangualde</a></li>
+                <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                    <ul> 
+                       <li><b>Sem Informação</b> </li>
+                    </ul>
+                </li>
+                <li><b>Pagamento Alternativo de Água ao Município de Mangualde</b></li>
+            </ul>
+        <p></p>
+      </div>
+    </div>
+  </div>
+
+  <!--Papelaria Seixas - Mangualde-->
+  <div class="col-md-4 mb-5">
+    <div class="card h-100">
+      <div class="card-body">
+        <h3 class="card-title"> Papelaria Seixas </h3>
+            </p><ul>
+                <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/4BVZMQXptXeBAGZd6"> Mangualde</a></li>
+                <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                    <ul> 
+                       <li><b>Sem Informação</b> </li>
+                    </ul>
+                </li>
+                <li><b>Pagamento Alternativo de Água ao Município de Mangualde</b></li>
+            </ul>
+        <p></p>
+      </div>
+    </div>
+  </div>
+
+    <!--Café Amaral-->
+    <div class="col-md-4 mb-5">
+      <div class="card h-100">
+        <div class="card-body">
+          <h3 class="card-title"> Café Amaral </h3>
+              </p><ul>
+                  <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/83Dod4GEx63ni3Xk7"> Mangualde</a></li>
+                  <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                      <ul> 
+                         <li><b>Sem Informação</b> </li>
+                      </ul>
+                  </li>
+                  <li><b>Pagamento Alternativo de Água ao Município de Mangualde</b></li>
+              </ul>
+          <p></p>
+        </div>
+      </div>
+    </div>
+                  
           <!--Fim da row-->
       </div>
 <!--Serviços Câmara Municipal de Mangualde-->
@@ -400,7 +480,7 @@
   <div class="col-md-4 mb-5">
     <div class="card h-100">
       <div class="card-body">
-        <h3 class="card-title">Galp Mangualde </h3>
+        <h3 class="card-title">Galp - Mangualde </h3>
             </p><ul>
                 <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/6E54UXaUivspxSSx9"> Mangualde</a></li>
                 <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
@@ -417,12 +497,12 @@
 <div class="col-md-4 mb-5">
     <div class="card h-100">
       <div class="card-body">
-        <h3 class="card-title">Repsol Mangualde </h3>
+        <h3 class="card-title">Repsol - Mangualde </h3>
             </p><ul>
                 <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/BfTvzojcXsVdjSNb6"> Mangualde</a></li>
                 <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
                     <ul> 
-                       <li><b>Sem Informação</b> </li>
+                       <li><b>Seg-Dom:</b> 7h30m - 20h30m </li>
                     </ul>
                 </li>
             </ul>
