--- a/supermercados.html
+++ b/supermercados.html
@@ -55,7 +55,7 @@
           <p class="text-white m-0" style="font-size: 40px; margin-top: 20px;padding:10px;">Bens Alimentares<i class="fas fa-shopping-cart" aria-hidden="true"></i></p>
       </div>
       </div>
-      <h2 style="font-weight: bold;">Hipermercados</h2>
+      <h2 style="font-weight: bold;">Hipermercados / Minimercados</h2>
       <hr>
       <div class="row" style="font-size: 16px;">
         <!--Lidl-->
@@ -124,8 +124,7 @@
                         <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/Z2e1vT737GfgbzMn6"> Mangualde</a></li>
                         <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
                             <ul> 
-                                <li><b>Seg-Sáb:</b> 9h - 20h</li>
-                                <li><b>Dom:</b> 9h - 13h</li>
+                                <li><b>Seg-Dom:</b> 9h - 19h</li>
                             </ul>
                         </li>
                     </ul>
@@ -163,9 +162,11 @@
                               <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/TRyvCQSCiMvzjndw7"> Mangualde</a></li>
                               <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
                                   <ul> 
-                                      <li><b>Sem Informação</b></li>
+                                      <li><b>Seg-Sex:</b> 8h30m - 19h</li>
+                                      <li><b>Sáb:</b> 8h30m- 12h30m</li>
                                   </ul>
                               </li>
+                              <li><b>Entregas ao domicílio</b></li>
                           </ul>
                       <p></p>
                     </div>
@@ -175,26 +176,27 @@
                 <div class="col-md-4 mb-5">
                   <div class="card h-100">
                     <div class="card-body">
-                      <h3 class="card-title">Mercado Chãs Shopping</h3>
+                      <h3 class="card-title">Chãs Shopping Center</h3>
                       <p class="card-text">
                           </p><ul>
-                            <li><i class="fab fa-facebook" aria-hidden="true"></i><a href="https://www.facebook.com/tipao.cashandcarry/"> Facebook</a></li>
+                            <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:232651864"> 232651864</a></li>
                               <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/TRyvCQSCiMvzjndw7"> Chãs de Tavares</a></li>
                               <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
                                   <ul> 
                                       <li><b>Seg-Dom:</b> 9h - 20h</li>
                                   </ul>
                               </li>
+                              <li><b>Entregas ao domicílio</b></li>
                           </ul>
                       <p></p>
                     </div>
                   </div>
                 </div>
-<!--Animais & Companhia-->
+<!--Frutas & Companhia-->
                 <div class="col-md-4 mb-5">
                   <div class="card h-100">
                     <div class="card-body">
-                      <h3 class="card-title">Animais & Companhia</h3>
+                      <h3 class="card-title">Frutas & Companhia</h3>
                       <p class="card-text">
                           </p><ul>
                             <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:232188399"> 232188399</a></li>
@@ -202,7 +204,7 @@
                               <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/jrE5YLpoKn7oFLbY8"> Mangualde</a></li>
                               <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
                                   <ul> 
-                                      <li><b>Seg-Sex:</b> 8h - 19h30m</li>
+                                      <li><b>Seg-Dom:</b> 9h - 13h / 14h - 19h</li>
                                   </ul>
                               </li>
                               <li><b>Entregas ao domicílio</b></li>
@@ -275,6 +277,202 @@
                   </div>
                 </div>
               </div>
+                   <!--Minimercado - Café Peixoto-->
+                   <div class="col-md-4 mb-5">
+                    <div class="card h-100">
+                      <div class="card-body">
+                        <h3 class="card-title">Café Peixoto - Fornos de Maceira Dão</h3>
+                        <p class="card-text">
+                            </p><ul>
+                                <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/XRCLefTxU1um2rZL7"> Fornos de Maceira Dão</a></li>
+                                <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                                    <ul> 
+                                        <li><b>Sem Informação</b></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        <p></p>
+                      </div>
+                    </div>
+                  </div>
+                     <!--Minimercado - Café Afonso-->
+                     <div class="col-md-4 mb-5">
+                      <div class="card h-100">
+                        <div class="card-body">
+                          <h3 class="card-title">Café Afonso - Vila Garcia</h3>
+                          <p class="card-text">
+                              </p><ul>
+                                  <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/qxuB9fXpJfRaKqyZ9"> Vila Garcia</a></li>
+                                  <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                                      <ul> 
+                                          <li><b>Sem Informação</b></li>
+                                      </ul>
+                                  </li>
+                              </ul>
+                          <p></p>
+                        </div>
+                      </div>
+                    </div>
+
+                      <!--Minimercado - O Padeiro-->
+                      <div class="col-md-4 mb-5">
+                        <div class="card h-100">
+                          <div class="card-body">
+                            <h3 class="card-title">O Padeiro - Fagilde</h3>
+                            <p class="card-text">
+                                </p><ul>
+                                  <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:232623627"> 232623627</a></li>
+                                    <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/r3AWT7jCf4dsA1xE7"> Fagilde</a></li>
+                                    <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                                        <ul> 
+                                            <li><b>Sem Informação</b></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            <p></p>
+                          </div>
+                        </div>
+                      </div>
+
+                      <!--Minimercado - Café Central-->
+                      <div class="col-md-4 mb-5">
+                        <div class="card h-100">
+                          <div class="card-body">
+                            <h3 class="card-title">Café Central - Contenças de Cima</h3>
+                            <p class="card-text">
+                                </p><ul>
+                                  <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:938487783"> 938487783</a></li>
+                                    <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/JPhkbJPhPJeHRtbD8"> Contenças de Cima</a></li>
+                                    <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                                        <ul> 
+                                            <li><b>Sem Informação</b></li>
+                                        </ul>
+                                    </li>
+                                    <li><b>Entregas na Freguesia</b></li>
+                                </ul>
+                            <p></p>
+                          </div>
+                        </div>
+                      </div>
+
+                      
+                      <!--Minimercado - Café Progresso-->
+                      <div class="col-md-4 mb-5">
+                        <div class="card h-100">
+                          <div class="card-body">
+                            <h3 class="card-title">Café Progresso - Santiago de Cassurães</h3>
+                            <p class="card-text">
+                                </p><ul>
+                                    <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/ULchB9KSH2zCXhpKAhttps://goo.gl/maps/JPhkbJPhPJeHRtbD8"> Santiago de Cassurães</a></li>
+                                    <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                                        <ul> 
+                                            <li><b>Sem Informação</b></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            <p></p>
+                          </div>
+                        </div>
+                      </div>
+
+                         <!--Minimercado - Café Pedro-->
+                         <div class="col-md-4 mb-5">
+                          <div class="card h-100">
+                            <div class="card-body">
+                              <h3 class="card-title">Café Pedro - Abrunhosa a Velha</h3>
+                              <p class="card-text">
+                                  </p><ul>
+                                      <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/mu9e1UswS6qxQ6bC7"> Abrunhosa a Velha</a></li>
+                                      <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                                          <ul> 
+                                              <li><b>Sem Informação</b></li>
+                                          </ul>
+                                      </li>
+                                  </ul>
+                              <p></p>
+                            </div>
+                          </div>
+                        </div>
+
+                           <!--Minimercado - Café Pais-->
+                           <div class="col-md-4 mb-5">
+                            <div class="card h-100">
+                              <div class="card-body">
+                                <h3 class="card-title">Café Pais - Abrunhosa a Velha</h3>
+                                <p class="card-text">
+                                    </p><ul>
+                                        <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/F3TRWrZ2xTeNYBBU7"> Abrunhosa a Velha</a></li>
+                                        <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                                            <ul> 
+                                                <li><b>Seg-Sáb:</b> 9h - 12h</li>
+                                            </ul>
+                                        </li>
+                                    </ul>
+                                <p></p>
+                              </div>
+                            </div>
+                          </div>
+
+             <!--Minimercado - Café Gil Vicente-->
+             <div class="col-md-4 mb-5">
+              <div class="card h-100">
+                <div class="card-body">
+                  <h3 class="card-title">Café Gil Vicente - Guimarães de Tavares</h3>
+                  <p class="card-text">
+                      </p><ul>
+                          <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/VEP9gGHtZdhqYEtk9"> Guimarães de Tavares</a></li>
+                          <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                              <ul> 
+                                  <li><b>Sem Informação</b></li>
+                              </ul>
+                          </li>
+                          <li><b>Entregas ao domicílio</b></li>
+                      </ul>
+                  <p></p>
+                </div>
+              </div>
+            </div>
+
+                 <!--Minimercado Paga Pouco-->
+                 <div class="col-md-4 mb-5">
+                  <div class="card h-100">
+                    <div class="card-body">
+                      <h3 class="card-title">Minimercado Paga Pouco - Freixiosa</h3>
+                      <p class="card-text">
+                          </p><ul>
+                            <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:232651422"> 232651422</a></li>
+                              <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/TcNc7sHjkvyGFmH27"> Freixiosa</a></li>
+                              <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                                  <ul> 
+                                      <li><b>Sem Informação</b></li>
+                                  </ul>
+                              </li>
+                              <li><b>Entregas ao domicílio na Freguesia</b></li>
+                          </ul>
+                      <p></p>
+                    </div>
+                  </div>
+                </div>
+<!--Frutaria e Garrafeira de Mangualde - Santos-->
+<div class="col-md-4 mb-5">
+  <div class="card h-100">
+    <div class="card-body">
+      <h3 class="card-title">Frutaria e Garrafeira de Mangualde - Santos</h3>
+      <p class="card-text">
+          </p><ul>
+            <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:232622070"> 232622070</a></li>
+              <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/gtKmKGQoE79tnu227"> Mangualde</a></li>
+              <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                  <ul> 
+                      <li><b>Seg-Dom:</b> 9h - 13h / 14h - 19h</li>
+                  </ul>
+              </li>
+              <li><b>Entregas ao domicílio na Freguesia</b></li>
+          </ul>
+      <p></p>
+    </div>
+  </div>
+</div>
           <!--Fim da row-->
 </div>
 <!--Talhos-->
