--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-162389133-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-162389133-1');
+</script>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="Website de apoio à comunidade de Mangualde durante a quarentena devido ao vírus COVID-19">
@@ -53,9 +62,9 @@
     </div>
   </div>
   -->
+ 
       <div class="container" style="margin-top: 90px;">
 <img class="image" src="mangualde.jpg" style="margin-bottom:20px; width:100%; ">
-    
 <div class=" justify-content-center align-items-center row">
   <div class="col-md-12 mb-5">
     <div class="card h-100">
