--- a/voluntario.html
+++ b/voluntario.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-162389133-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-162389133-1');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Website de apoio à comunidade de Mangualde durante a quarentena devido ao vírus COVID-19">
@@ -40,11 +49,11 @@
               <a class="nav-link" href="info.html">Contacto</a>
             </li>
             <li class="nav-item active bg-danger" id="voluntario" style="border-radius:7px;">
-                <a class="nav-link"  href="voluntario.html" >Ser Voluntário</a>
-              </li>
-          </ul>
-        </div>
-      </div>
+                <a class="nav-link"  href="voluntario.html">Ser Voluntário</a>
+            </li>  
+          </ul> 
+        </div>   
+      </div>    
     </nav>
   
     <div class="container"  style="margin-top:90px;">
@@ -72,8 +81,9 @@
                             <li> Capacidade de <b>trabalhar em equipa</b></li>
                             <li> Disponibilidade para exercer no <b>mínimo 4 horas semanais</b></li>
                             <li> <b>Não pertencer a um grupo de risco</b></li>
-                          <p><li><b>Os voluntários têm direito a receber apoio no enquadramento, seguro de voluntário e equipamento individual de proteção</b></li></p>
+                            <p><li><b>Os voluntários têm direito a receber apoio no enquadramento, seguro de voluntário e equipamento individual de proteção</b></li></p>
                         </ul>
+                        
                 <ul>
                     <li><i class="fas fa-globe" aria-hidden="true"></i><a href="https://docs.google.com/forms/d/e/1FAIpQLScrdoGMlLf57-JpCy0a_-A0TsqftgJUKRF32NnrpRom5O7fGA/viewform"> <b>Sê Voluntário</b> </a></li>
                     </ul>
