--- a/farmacias.html
+++ b/farmacias.html
@@ -66,27 +66,27 @@
       <div class="justify-content-center align-items-center row" >
           <div class="row w-100">
           <!--Farmácia de Serviço-->
-      <!--Farmácia Albuquerque-->
-      <div class="col-md-6 mb-5">
+       <!--Farmácia Espinho Petrucci-->
+       <div class="col-md-6 mb-5">
         <div class="card h-100">
           <div class="card-body">
-            <h3 class="card-title">Farmácia Albuquerque</h3>
+            <h3 class="card-title">Farmácia Espinho Petrucci</h3>
             <p class="card-text">
                 </p><ul>
-                  <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:232611952"> 232611952</a></li>
-                  <li><i class="fab fa-facebook" aria-hidden="true"></i><a href="https://www.facebook.com/pages/category/Pharmacy---Drugstore/Farm%C3%A1cia-Albuquerque-468025329935643/"> Facebook</a></li>
-                    <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/nwQSvem81ATRpbQQ9"> Mangualde</a></li>
+                  <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:232622240"> 232622240</a></li>
+                  <li><i class="fab fa-facebook" aria-hidden="true"></i><a href="https://www.facebook.com/FarmaciaEspinhoPetrucci/"> Facebook</a></li>
+                    <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/W5KYGHKMnvCutCRm6"> Mangualde</a></li>
                     <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
                         <ul> 
-                            <li><b>Seg-Sex:</b> 8h30m - 20h</li>
-                            <li><b>Sáb:</b> 8h30m - 19h</li>
+                          <li><b>Seg-Sex:</b> 8h30m - 20h</li>
+                          <li><b>Sáb:</b> 8h30m - 19h</li>
                         </ul>
                     </li>
                 </ul>
             <p></p>
           </div>
         </div>
-      </div>
+    </div>
       <!--Farmácia Beirão (serviço)-->
       <div class="col-md-6 mb-5">
         <div class="card h-100">
@@ -110,7 +110,7 @@
     </div>
      
     <!--Fim da row-->
-      </div></div> <h6 style="text-align: center;"><b>Atualizado a 11/04/2020 10:00</b></h6>
+      </div></div> <h6 style="text-align: center;"><b>Atualizado a 13/04/2020 10:00</b></h6>
       <!--Farmácias Mangualde-->
       <h2 style="font-weight: bold;">Mangualde</h2>
       <hr>
